force-app/main/default/objects/IT_Intent_Declaration__c/IT_Intent_Declaration__c.object-meta.xml
<CustomObject>
    <label>Intent Declaration</label>
    <nameField>
        <label>Intent Declaration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intent declaration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>