force-app/main/default/objects/IT_Intent_Declaration__c/fields/IT_Declaration_Number__c.field-meta.xml
<CustomField>
    <fullName>IT_Declaration_Number__c</fullName>
    <label>Declaration Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>