force-app/main/default/objects/IT_Intent_Declaration__c/fields/IT_Declared_Amount__c.field-meta.xml
<CustomField>
    <fullName>IT_Declared_Amount__c</fullName>
    <label>Declared Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>