force-app/main/default/objects/IT_Intent_Declaration__c/fields/IT_Exporter_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Exporter_Type__c</fullName>
    <label>Exporter Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IT_Exporter_Type</valueSetName>
    </valueSet>
</CustomField>