force-app/main/default/objects/IT_Intent_Declaration__c/fields/IT_Fiscal_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_Fiscal_Code__c</fullName>
    <label>Fiscal Code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>