force-app/main/default/objects/IT_Intent_Declaration__c/fields/IT_Future_Change_Intent_Declaration__c.field-meta.xml
<CustomField>
    <fullName>IT_Future_Change_Intent_Declaration__c</fullName>
    <label>Future Change Intent Declaration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>