force-app/main/default/objects/IT_Intent_Declaration__c/fields/IT_Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Operation_Type__c</fullName>
    <label>Operation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>One Operation only</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Operation up to contentions</label>
            </value>
            <value>
                <fullName>0</fullName>
                <isActive>false</isActive>
                <label>0</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>