force-app/main/default/objects/IT_Intent_Declaration__c/fields/IT_Presentation_Date__c.field-meta.xml
<CustomField>
    <fullName>IT_Presentation_Date__c</fullName>
    <label>Presentation Date</label>
    <type>Date</type>
</CustomField>