force-app/main/default/objects/IT_Intent_Declaration__c/fields/IT_Progressive__c.field-meta.xml
<CustomField>
    <fullName>IT_Progressive__c</fullName>
    <label>Progressive</label>
    <length>5</length>
    <type>Text</type>
</CustomField>