force-app/main/default/objects/IT_Intent_Declaration__c/fields/IT_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>FREE</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>EXCLUDING VAT</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>NOT TAXABLE</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>OFF-VAT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>