force-app/main/default/objects/IT_Intent_Declaration__c/fields/IT_Validity_End_Date__c.field-meta.xml
<CustomField>
    <fullName>IT_Validity_End_Date__c</fullName>
    <label>Validity End Date</label>
    <type>Date</type>
</CustomField>