force-app/main/default/objects/IT_Intent_Declaration__c/fields/IT_Validity_Year__c.field-meta.xml
<CustomField>
    <fullName>IT_Validity_Year__c</fullName>
    <label>Validity Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>