force-app/main/default/objects/IT_Intent_Declaration__c/validationRules/VR04IT_Fiscal_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>VR04IT_Fiscal_Code</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
						$User.ER_BypassVR__c = False,
ISPICKVAL(	$User.ER_Business_Unit__c , &#39;IT&#39;),
NOT(IT_Account__r.IT_Fiscal_Code__c = IT_Fiscal_Code__c)

)</errorConditionFormula>
    <errorMessage>The &#39;Fiscal Code&#39; must correspond to an existing account</errorMessage>
</ValidationRule>