force-app/main/default/objects/IT_Intent_Declaration__c/validationRules/VRIT01_Validity_Year.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT01_Validity_Year</fullName>
    <active>true</active>
    <errorConditionFormula>AND($User.ER_BypassVR__c = False,
	ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),
				NOT(ISNUMBER(IT_Validity_Year__c)) ||
(ISNUMBER(IT_Validity_Year__c) &amp;&amp;
ISCHANGED(IT_Validity_Year__c) &amp;&amp;
VALUE(PRIORVALUE(IT_Validity_Year__c)) &gt; VALUE(IT_Validity_Year__c)))</errorConditionFormula>
    <errorMessage>WARNING! Enter the current year or current year +1!</errorMessage>
</ValidationRule>