force-app/main/default/objects/IT_Intent_Declaration__c/validationRules/VRIT02_Presentation_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT02_Presentation_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				IT_Presentation_Date__c &gt;TODAY(),
				$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;)
)</errorConditionFormula>
    <errorMessage>It cannot be a future date!</errorMessage>
</ValidationRule>