force-app/main/default/objects/IT_Intent_Declaration__c/validationRules/VRIT03_Exporter_Type_OR.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT03_Exporter_Type_OR</fullName>
    <active>true</active>
    <errorConditionFormula>AND(	$User.ER_BypassVR__c = False,
ISPICKVAL(	$User.ER_Business_Unit__c , &#39;IT&#39;),
		OR(		AND(
 			NOT( ISBLANK(IT_Declaration_Number__c  )),
				ISPICKVAL( IT_Operation_Type__c	  ,&#39;&#39;)),
				AND(
											NOT( ISBLANK(IT_Declaration_Number__c  )),
			ISPICKVAL( IT_Exporter_Type__c ,&#39;&#39;)),
								AND(
											NOT( ISBLANK(IT_Declaration_Number__c  )),
			ISBLANK(  IT_Declared_Amount__c )),
					AND(
									NOT( ISBLANK(IT_Declaration_Number__c )),
ISBLANK( IT_Fiscal_Code__c )
	
								)
)
			)</errorConditionFormula>
    <errorMessage>Insert fied &#39;Exporter Type&#39; or &#39;Operation Type&#39; or &#39;Declaration Amount&#39; or &#39;Fiscal Code&#39;.</errorMessage>
</ValidationRule>